add background image and search form

--- a/index.html
+++ b/index.html
@@ -40,8 +40,38 @@
       </div>
     </nav>
   </div>
-  <footer>
-    <div class="container-fluid">
+  <div class="container-fluid row mt-4 topDiv">
+    <div class="col-12 col-md-6 d-flex flex-column justify-content-center ">
+      <h4 class="  text-light fs-1">Turn Back Crime</h4>
+      <h1 class=" orange logo 
+      ">StolenCar Reg</h1>
+      <p class="position-relative text-center text-light fs-4">
+
+        Now Its Easy For You<br> To Identify Stolen Vehicle
+      </p>
+    </div>
+    <div class="d-flex justify-content-center flex-column col-12 col-md-6">
+      <div class="searchForm">
+        <p class="text-light fs-4 ms-3 mt-4">StolenCar Vehicle History Search<br> <strong>Buying a used car?</strong><br> Check to see if it has ever been<br> reported stolen to StolenCar Reg </p>
+
+        <div class="container">
+          <hr class="text-light">
+          <div class="mt-4">
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter Chassis Number....">
+          </div>
+          <div class="mt-4 col-12 ">
+            <button type="submit" class="btn   text-light submit"> Search</button>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
+  <footer class="mt-auto">
+    <div class="container-fluid ">
       <ul class="d-flex justify-content-center">
         <li>
           <a href="#"><img src="./static/images/fb.png"></a>
