add links to nav titles

--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
         <div class="collapse navbar-collapse  " id="navbarNav">
           <ul class="navbar-nav  ms-auto list">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">View Stolen Cars</a>
+              <a class="nav-link" href="./viewstolencars.html">View Stolen Cars</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Register Stolen cars</a>
+              <a class="nav-link" href="./registration.html">Register Stolen cars</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contactUs.html">Contact us</a>
             </li>
 
           </ul>
@@ -50,7 +53,7 @@
         Now Its Easy For You<br> To Identify Stolen Vehicle
       </p>
     </div>
-    <div class="d-flex justify-content-center flex-column col-12 col-md-6">
+    <div class="d-flex justify-content-center align-items-center flex-column col-12 col-md-6">
       <div class="searchForm">
         <p class="text-light fs-4 ms-3 mt-4">StolenCar Vehicle History Search<br> <strong>Buying a used car?</strong><br> Check to see if it has ever been<br> reported stolen to StolenCar Reg </p>
 
@@ -60,7 +63,7 @@
             <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter Chassis Number....">
           </div>
           <div class="mt-4 col-12 ">
-            <button type="submit" class="btn   text-light submit"> Search</button>
+            <button type="button" class="btn   text-light submit"> Search</button>
           </div>
 
         </div>
