--- a/contactUs.html
+++ b/contactUs.html
@@ -2,76 +2,80 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./static/css/contactUs.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
-    <title>Stolen-Car-Reg</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="./static/css/contactUs.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
+  <title>Stolen-Car-Reg</title>
 </head>
 
 <body class="d-flex flex-column mt-auto">
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg mt-5 navbar-light bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand orange logo " href="#">StolenCar Reg</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg mt-5 navbar-light bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand orange logo " href="#">StolenCar Reg</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-                <div class="collapse navbar-collapse  " id="navbarNav">
-                    <ul class="navbar-nav  ms-auto list">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">View Stolen Cars</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Register Stolen cars</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <div class="container-fluid d-flex justify-content-center align-items-center" id="date">
-        <div class="container tool ">
-            <form action="">
-                <div class=" d-flex form-group" id="take">
-                    <input type="your name" class="form-control" id="Name" placeholder="your name...">
-                    <input type="your email" class="form-control" id="Email" placeholder="your email...">
-                </div>
-                <div class="form-floating mt-4" id="boom">
-                    <textarea class="ms-auto me-auto form-control" placeholder="write your message here..." id="floatingTextarea"></textarea>
-                </div>
-            </form>
+        <div class="collapse navbar-collapse  " id="navbarNav">
+          <ul class="navbar-nav  ms-auto list">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./viewstolencars.html">View Stolen Cars</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./registration.html">Register Stolen cars</a>
 
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contactUs.html">Contact Us</a>
+            </li>
+          </ul>
         </div>
+      </div>
+    </nav>
+  </div>
+  <div class="container-fluid d-flex justify-content-center align-items-center" id="date">
+    <div class="container tool ">
+      <form action="">
+        <div class=" d-flex form-group" id="take">
+          <input type="your name" class="form-control" id="Name" placeholder="your name...">
+          <input type="your email" class="form-control" id="Email" placeholder="your email...">
+        </div>
+        <div class="form-floating mt-4" id="boom">
+          <textarea class="ms-auto me-auto form-control" placeholder="write your message here..." id="floatingTextarea"></textarea>
+        </div>
+      </form>
 
     </div>
-    <footer class="mt-auto">
-        <div class="container-fluid">
-            <ul class="d-flex justify-content-center">
-                <li>
-                    <a href="#"><img src="./static/images/fb.png"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="./static/images/ig.png"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="./static/images/tw.png"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="./static/images/yt.png"></a>
-                </li>
-            </ul>
-        </div>
-    </footer>
-    </>
+
+  </div>
+  <footer class="mt-auto">
+    <div class="container-fluid">
+      <ul class="d-flex justify-content-center">
+        <li>
+          <a href="#"><img src="./static/images/fb.png"></a>
+        </li>
+        <li>
+          <a href="#"><img src="./static/images/ig.png"></a>
+        </li>
+        <li>
+          <a href="#"><img src="./static/images/tw.png"></a>
+        </li>
+        <li>
+          <a href="#"><img src="./static/images/yt.png"></a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+  </>
 
 </html>
