--- a/viewstolencars.html
+++ b/viewstolencars.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,8 +14,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
   <title>Stolen-Car-Reg</title>
 </head>
+
 <body class="d-flex flex-column mt-auto">
-<!-- start of nav section -->
+  <!-- start of nav section -->
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg mt-5 navbar-light bg-dark">
       <div class="container-fluid">
@@ -25,105 +27,108 @@
         <div class="collapse navbar-collapse  " id="navbarNav">
           <ul class="navbar-nav  ms-auto list">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">View Stolen Cars</a>
+              <a class="nav-link" href="./viewstolencars.html">View Stolen Cars</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Register Stolen cars</a>
+              <a class="nav-link" href="./registration.html">Register Stolen cars</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contactUs.html">Contact Us</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
   </div>
-<!-- end of nav section -->
+  <!-- end of nav section -->
 
-<!-- start of search section section -->
-<div class="container-fluid">
-  <div class="row" id="stolentext" >
-    <div class="col-md-8">
-      <h3> Stolen Cars In Our Database</h3>
-      <p></p>
-    </div>
-    <div class="col-md-4 d-flex align-items-center justify-content-center" >
-      <input type="text" placeholder="Enter Chassis Number..." id="searchbox">
-      <button class="btn btn-primary" id="search">
+  <!-- start of search section section -->
+  <div class="container-fluid">
+    <div class="row" id="stolentext">
+      <div class="col-md-8">
+        <h3> Stolen Cars In Our Database</h3>
+        <p></p>
+      </div>
+      <div class="col-md-4 d-flex align-items-center justify-content-center">
+        <input type="text" placeholder="Enter Chassis Number..." id="searchbox">
+        <button class="btn btn-primary" id="search">
         <img src="static/images/search.png" alt="" width="20px">
       </button>
-    </div>
-  </div>
-</div>
-<!-- end of search section -->
-
-<!-- start of titles section section -->
-<div class="container-fluid">
-  <div class="row" id="titlestext" >
-    <div class="col-md-9">
-     <p style="padding-left:8%">Vehicle</p> 
-      <p style="padding-left:20%">Last Seen On</p>
-      <p style="padding-left:17%">License</p>
-    </div>
-    <div class="col-md-3">
-     
-    </div>
-  </div>
-</div>
-<!-- end of titles section -->
-
-<!-- start of firstview section -->
-<div class="container-fluid">
-  <div class="row" >
-    <div class="col-md-12">
-      <div class="viewbox">
-        <p>2017 Toyota Camry</p>
-        <p>Sunday, June 27, 2021</p>
-        <p>Missouri - License Plate:  TC5C3Z</p>
-        <button class="btn btn-primary" id="view" style="margin-left:120px">VIEW</button>
       </div>
-
     </div>
   </div>
-</div>
-<!-- end of firstview section -->
+  <!-- end of search section -->
 
-<!-- start of secondview section -->
-<div class="container-fluid">
-  <div class="row" >
-    <div class="col-md-12">
-      <div class="viewbox">
-        <p>2017 Toyota Camry</p>
-        <p>Sunday, June 27, 2021</p>
-        <p>Missouri - License Plate:  TC5C3Z</p>
-        <button class="btn btn-primary" id="view" style="margin-left:120px">VIEW</button>
+  <!-- start of titles section section -->
+  <div class="container-fluid">
+    <div class="row" id="titlestext">
+      <div class="col-md-9">
+        <p style="padding-left:8%">Vehicle</p>
+        <p style="padding-left:20%">Last Seen On</p>
+        <p style="padding-left:17%">License</p>
+      </div>
+      <div class="col-md-3">
 
       </div>
-
     </div>
   </div>
-</div>
-<!-- end of secondview section -->
+  <!-- end of titles section -->
 
-<!-- start of thirdview section -->
-<div class="container-fluid">
-  <div class="row" >
-    <div class="col-md-12">
-      <div class="viewbox">
-        <p>2017 Toyota Camry</p>
-        <p>Sunday, June 27, 2021</p>
-        <p>Missouri - License Plate:  TC5C3Z</p>
-        <button class="btn btn-primary" id="view" style="margin-left:120px">VIEW</button>
+  <!-- start of firstview section -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="viewbox">
+          <p>2017 Toyota Camry</p>
+          <p>Sunday, June 27, 2021</p>
+          <p>Missouri - License Plate: TC5C3Z</p>
+          <button class="btn btn-primary" id="view" style="margin-left:120px">VIEW</button>
+        </div>
 
       </div>
-
     </div>
   </div>
-</div>
-<!-- end of thirdview section -->
+  <!-- end of firstview section -->
+
+  <!-- start of secondview section -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="viewbox">
+          <p>2017 Toyota Camry</p>
+          <p>Sunday, June 27, 2021</p>
+          <p>Missouri - License Plate: TC5C3Z</p>
+          <button class="btn btn-primary" id="view" style="margin-left:120px">VIEW</button>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <!-- end of secondview section -->
+
+  <!-- start of thirdview section -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="viewbox">
+          <p>2017 Toyota Camry</p>
+          <p>Sunday, June 27, 2021</p>
+          <p>Missouri - License Plate: TC5C3Z</p>
+          <button class="btn btn-primary" id="view" style="margin-left:120px">VIEW</button>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <!-- end of thirdview section -->
 
 
-<!-- start of footer section -->
+  <!-- start of footer section -->
   <footer class="mt-auto">
     <div class="container-fluid">
       <ul class="d-flex justify-content-center">
@@ -142,6 +147,7 @@
       </ul>
     </div>
   </footer>
-<!-- end of footer section -->
+  <!-- end of footer section -->
 </body>
+
 </html>
