--- a/viewstolencars.html
+++ b/viewstolencars.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="./static/css/viewstolencars.css">
+  <script src="https://use.fontawesome.com/4ffea7cb58.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
   <title>Stolen-Car-Reg</title>
 </head>
@@ -63,71 +64,155 @@
   <!-- end of search section -->
 
   <!-- start of titles section section -->
-  <div class="container-fluid">
-    <div class="row" id="titlestext">
-      <div class="col-md-9">
-        <p style="padding-left:8%">Vehicle</p>
-        <p style="padding-left:20%">Last Seen On</p>
-        <p style="padding-left:17%">License</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <p class="text-light fs-4">Vehicle</p>
       </div>
       <div class="col-md-3">
-
+        <p class="text-light fs-4">Last Seen On</p>
       </div>
+      <div class="col-md-3">
+        <p class="text-light fs-4">License</p>
+      </div>
+
     </div>
   </div>
   <!-- end of titles section -->
 
   <!-- start of firstview section -->
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="viewbox">
-          <p>2017 Toyota Camry</p>
-          <p>Sunday, June 27, 2021</p>
-          <p>Missouri - License Plate: TC5C3Z</p>
-          <button class="btn btn-primary" id="view" style="margin-left:120px">VIEW</button>
-        </div>
+  <div class="container mt-4">
+    <div class="container-fluid row viewbox">
+      <div class="d-flex align-items-center col-12 col-md-3">
+        <p class="text-light fs-4">2011 Toyota Wish</p>
+      </div>
 
+      <div class="d-flex align-items-center col-12 col-md-3">
+        <p class="text-light fs-4">Sunday, June 27, 2021</p>
+      </div>
+      <div class="d-flex align-items-center col-12 col-md-3">
+        <p class="text-light fs-4"> KCF 569F</p>
+      </div>
+      <div class="d-md-flex align-items-center justify-content-center col-12 col-md-3">
+        <button class="btn btn-primary view">VIEW</button>
       </div>
     </div>
   </div>
+
+
   <!-- end of firstview section -->
 
   <!-- start of secondview section -->
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="viewbox">
-          <p>2017 Toyota Camry</p>
-          <p>Sunday, June 27, 2021</p>
-          <p>Missouri - License Plate: TC5C3Z</p>
-          <button class="btn btn-primary" id="view" style="margin-left:120px">VIEW</button>
+  <div class="container mt-4">
+    <div class="container-fluid row viewbox">
+      <div class="d-flex align-items-center col-12 col-md-3">
+        <p class="text-light fs-4">2019 Toyota Rush</p>
+      </div>
 
-        </div>
-
+      <div class="d-flex align-items-center col-12 col-md-3">
+        <p class="text-light fs-4">Thursday, March 29th, 2021</p>
+      </div>
+      <div class="d-flex align-items-center col-12 col-md-3">
+        <p class="text-light fs-4"> KDA 578C</p>
+      </div>
+      <div class="d-md-flex align-items-center justify-content-center col-12 col-md-3">
+        <button class="btn btn-primary view">VIEW</button>
       </div>
     </div>
   </div>
   <!-- end of secondview section -->
 
   <!-- start of thirdview section -->
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="viewbox">
-          <p>2017 Toyota Camry</p>
-          <p>Sunday, June 27, 2021</p>
-          <p>Missouri - License Plate: TC5C3Z</p>
-          <button class="btn btn-primary" id="view" style="margin-left:120px">VIEW</button>
+  <div class="container mt-4">
+    <div class="container-fluid row viewbox">
+      <div class="d-flex align-items-center col-12 col-md-3">
+        <p class="text-light fs-4">2017 Toyota Camry</p>
+      </div>
 
-        </div>
-
+      <div class="d-flex align-items-center col-12 col-md-3">
+        <p class="text-light fs-4">Tuesday, January 27, 2021</p>
+      </div>
+      <div class="d-flex align-items-center col-12 col-md-3">
+        <p class="text-light fs-4"> KCF 890A</p>
+      </div>
+      <div class="d-md-flex align-items-center justify-content-center col-12 col-md-3">
+        <button class="btn btn-primary view">VIEW</button>
       </div>
     </div>
   </div>
   <!-- end of thirdview section -->
 
+  <div class="container-fluid  justify-content-center align-items-center position-fixed start-0 end-0 top-0 bottom-0 pop">
 
+    <div class="  pop-up ">
+      <button class="btn btn-outline-"><i class=" fa fa-times"></i></button>
+      <h5 class="pt-2">View Vehicle Report
+      </h5>
+      <hr>
+      <div class=" container-fluid row">
+
+        <div class="col-12 col-md-6 d-flex justify-content-center ">
+          <img src="./static/images/wish.jpeg" alt="">
+
+        </div>
+        <div class="col-12 col-md-6 mb-2">
+
+          <h4 class="text-light text-center ms-auto me-auto ">Vehicle Description</h4>
+          <div class="row mk">
+            <div class="col-6 ">
+              <p class="text-center">Make</p>
+            </div>
+            <div class="col-6">
+              <p class="text-center">Toyota</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <p class="text-center">Year</p>
+            </div>
+            <div class="col-6">
+              <p class="text-center">2017</p>
+            </div>
+          </div>
+          <div class="row mk">
+            <div class="col-6">
+              <p class="text-center">Exterior</p>
+            </div>
+            <div class="col-6">
+              <p class="text-center">black</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <p class="text-center">Interior</p>
+            </div>
+            <div class="col-6">
+              <p class="text-center">Grey</p>
+            </div>
+          </div>
+          <div class="row mk">
+            <div class="col-6">
+              <p class="text-center">Licence Plate</p>
+            </div>
+            <div class="col-6">
+              <p class="text-center">KCU 477F</p>
+            </div>
+          </div>
+          <div class="row mk">
+            <div class="col-6">
+              <p class="text-center">Chassis Number</p>
+            </div>
+            <div class="col-6">
+              <p class="text-center">BF-BK-34566-345</p>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+
+  </div>
   <!-- start of footer section -->
   <footer class="mt-auto">
     <div class="container-fluid">
