rename to main.js

--- a/viewstolencars.html
+++ b/viewstolencars.html
@@ -151,7 +151,7 @@
       <hr>
       <div class=" container-fluid row">
 
-        <div class="col-12 col-md-6 d-flex justify-content-center ">
+        <div class="col-12 col-md-6 d-flex justify-content-center align-items-center ">
           <img src="./static/images/wish.jpeg" alt="">
 
         </div>
@@ -198,7 +198,7 @@
               <p class="text-center">KCU 477F</p>
             </div>
           </div>
-          <div class="row mk">
+          <div class="row ">
             <div class="col-6">
               <p class="text-center">Chassis Number</p>
             </div>
@@ -233,6 +233,7 @@
     </div>
   </footer>
   <!-- end of footer section -->
+  <script src="./static/js/main.js"></script>
 </body>
 
 </html>
