--- a/viewstolencars.html
+++ b/viewstolencars.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
   <link rel="stylesheet" href="./static/css/viewstolencars.css">
   <script src="https://use.fontawesome.com/4ffea7cb58.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
@@ -17,6 +18,7 @@
 </head>
 
 <body class="d-flex flex-column mt-auto">
+
   <!-- start of nav section -->
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg mt-5 navbar-light bg-dark">
@@ -62,7 +64,9 @@
     </div>
   </div>
   <!-- end of search section -->
-
+  <div class="container mb-3 d-flex justify-content-center">
+    <button class="btn btn-danger fs-4 rptBtn">Report Stolen Car</button>
+  </div>
   <!-- start of titles section section -->
   <div class="container">
     <div class="row">
@@ -81,71 +85,14 @@
   <!-- end of titles section -->
 
   <!-- start of firstview section -->
-  <div class="container mt-4">
-    <div class="container-fluid row viewbox">
-      <div class="d-flex align-items-center col-12 col-md-3">
-        <p class="text-light fs-4">2011 Toyota Wish</p>
-      </div>
+  <div class="container-fluid stolenReg">
 
-      <div class="d-flex align-items-center col-12 col-md-3">
-        <p class="text-light fs-4">Sunday, June 27, 2021</p>
-      </div>
-      <div class="d-flex align-items-center col-12 col-md-3">
-        <p class="text-light fs-4"> KCF 569F</p>
-      </div>
-      <div class="d-md-flex align-items-center justify-content-center col-12 col-md-3">
-        <button class="btn btn-primary view">VIEW</button>
-      </div>
-    </div>
+    <!-- end of thirdview section -->
   </div>
-
-
-  <!-- end of firstview section -->
-
-  <!-- start of secondview section -->
-  <div class="container mt-4">
-    <div class="container-fluid row viewbox">
-      <div class="d-flex align-items-center col-12 col-md-3">
-        <p class="text-light fs-4">2019 Toyota Rush</p>
-      </div>
-
-      <div class="d-flex align-items-center col-12 col-md-3">
-        <p class="text-light fs-4">Thursday, March 29th, 2021</p>
-      </div>
-      <div class="d-flex align-items-center col-12 col-md-3">
-        <p class="text-light fs-4"> KDA 578C</p>
-      </div>
-      <div class="d-md-flex align-items-center justify-content-center col-12 col-md-3">
-        <button class="btn btn-primary view">VIEW</button>
-      </div>
-    </div>
-  </div>
-  <!-- end of secondview section -->
-
-  <!-- start of thirdview section -->
-  <div class="container mt-4">
-    <div class="container-fluid row viewbox">
-      <div class="d-flex align-items-center col-12 col-md-3">
-        <p class="text-light fs-4">2017 Toyota Camry</p>
-      </div>
-
-      <div class="d-flex align-items-center col-12 col-md-3">
-        <p class="text-light fs-4">Tuesday, January 27, 2021</p>
-      </div>
-      <div class="d-flex align-items-center col-12 col-md-3">
-        <p class="text-light fs-4"> KCF 890A</p>
-      </div>
-      <div class="d-md-flex align-items-center justify-content-center col-12 col-md-3">
-        <button class="btn btn-primary view">VIEW</button>
-      </div>
-    </div>
-  </div>
-  <!-- end of thirdview section -->
-
-  <div class="container-fluid  justify-content-center align-items-center position-fixed start-0 end-0 top-0 bottom-0 pop">
+  <div class="container-fluid  justify-content-center align-items-center    position-fixed start-0 end-0 top-0 bottom-0 pop pp">
 
     <div class="  pop-up ">
-      <button class="btn btn-outline-"><i class=" fa fa-times"></i></button>
+      <button class="btn btn-outline-warning close"><i class=" fa fa-times"></i></button>
       <h5 class="pt-2">View Vehicle Report
       </h5>
       <hr>
@@ -212,6 +159,40 @@
       </div>
     </div>
 
+  </div>
+  <div class="container-fluid position-fixed justify-content-center align-items-center reportTop">
+    <div class=" position-relative report">
+      <button class="btn btn-outline-danger position-absolute rapo"><i class=" fa fa-times"></i></button>
+      <form action="">
+        <div class="form-group d-md-flex">
+          <input type="text" class="form-control" id="make" placeholder="Make">
+          <input type="text" class="form-control" id="model" placeholder="Model">
+        </div>
+        <div class="form-group d-md-flex">
+
+          <input type="date" class="form-control" id="year" placeholder="last seen">
+          <input type="text" class="form-control" id="exteriorcolor" placeholder="Exterior Color">
+        </div>
+        <div class="form-group d-md-flex">
+          <input type="interior color" class="form-control" id="interiorcolor" placeholder="Interior Color">
+          <input type="text" class="form-control" id="vehicletype" placeholder="Vehicle Type">
+        </div>
+        <div class="form-group d-md-flex ">
+          <input type="chassisnumber" class="form-control" id="chassisnumber" placeholder="Chassis Number">
+          <input type="text" class="form-control" id="license" placeholder="Licence Number">
+        </div>
+
+        <div class=" " id="upi">
+          <input type="file" class=" btn btn-secondary" id="uploadimage">
+
+        </div>
+
+        <div class="d-flex justify-content-center">
+          <input type="submit" class="btn btn-warning" id="regBtn">
+        </div>
+
+      </form>
+    </div>
   </div>
   <!-- start of footer section -->
   <footer class="mt-auto">
