--- a/contactUs.html
+++ b/contactUs.html
@@ -39,7 +39,7 @@
             </div>
         </nav>
     </div>
-    <div class="container-fluid d-flex justify-content-center align-items-center" id="date">
+    <div class="container-fluid d-flex justify-content-center align-items-center flex-column" id="date">
         <div class="container tool ">
             <form action="">
                 <div class=" d-flex form-group" id="take">
@@ -49,9 +49,15 @@
                 <div class="form-floating mt-4" id="boom">
                     <textarea class="ms-auto me-auto form-control" placeholder="write your message here..." id="floatingTextarea"></textarea>
                 </div>
-            </form>
+        </div>
+        <div class="form-group d-flex justify-content-center align-items-center" id="admire">
+            <button class="btn btn-primary">SUBMIT</button>
 
         </div>
+
+        </form>
+
+    </div>
 
     </div>
     <footer class="mt-auto">
