--- a/registration.html
+++ b/registration.html
@@ -42,34 +42,21 @@
     <div class="container-fluid d-flex justify-content-center align-items-center" id="date">
         <div class="container tool ">
             <form action="">
-                <div class="form-group">
-                    <input type="make" class="form-control" id="make" placeholder="Make">
-                    <input type="model" class="form-control" id="model" placeholder="Model">
+                <div class="form-group" id="control">
+                    <input type="text" class="form-control" id="firstname" placeholder="First Name">
+                    <input type="text" class="form-control" id="lastname" placeholder="Last Name">
                 </div>
-                <div class="form-group">
-                    <input type="year" class="form-control" id="year" placeholder="Year">
-                    <input type="exterior color" class="form-control" id="exteriorcolor" placeholder="Exterior Color">
+                <div class="form-group" id="look">
+                    <input type="text" class="form-control" id="username" placeholder="username">
+                    <input type="email" class="form-control" id="email" placeholder="Email">
                 </div>
-                <div class="form-group">
-                    <input type="interior color" class="form-control" id="interiorcolor" placeholder="Interior Color">
-                    <input type="vehicletype" class="form-control" id="vehicletype" placeholder="Vehicle Type">
+                <div class="form-group" id="love">
+                    <input type="password" class="form-control" id="password" placeholder="Password">
+                    <input type="password" class="form-control" id="confirmpassword" placeholder="Confirm Password">
                 </div>
-                <div class="form-group">
-                    <input type="chassisnumber" class="form-control" id="chassisnumber" placeholder="Chassis Number">
-                    <input type="confirm chasis number" class="form-control" id="confirmchasisnumber" placeholder="Confirm Chassis Number">
+                <div class="form-group d-flex justify-content-center align-items-center" id="admire">
+                    <button class="btn btn-primary">REGISTER</button>
                 </div>
-                <div class="form-group" id="nis">
-                    <input type="no image selected" class="form-control" id="noimageselected" placeholder="No Image Selected...">
-                </div>
-                <div class="form-group" id="upi">
-                    <input type="upload image" class="form-control" id="uploadimage" placeholder="Upload Image" style="  color: #000">
-                </div>
-
-
-
-
-
-
 
             </form>
 
